--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@ window.open('version.html','','height=850, width=700, toolbar=no, menubar=no, sc
 
 <a href="javascript:;" onClick="showDescText('3')"><i>More detail</i><img src="arrow.gif" border="0" onload="infoldItems()" /></a><div id="3" class="subdesc"><br />
 <p>Professional photographers need to invest 
-  in a quality hardware monitor calibration device such as supplied by X-Rite (<a href="https://www.x-rite.com/" target="_blank">www.x-rite.com</a>) 
-  or Datacolor (<a href="https://www.datacolor.com/" target="_blank">www.datacolor.com</a>). 
+  in a quality hardware monitor calibration device such as supplied by Calibrite or Datacolor. 
   The human eye and Adobe Gamma (a part of Photoshop) do not permit calibration 
   with high enough precision for professional use. Comuter monitor's colour drifts 
   over time and should be verified regularly. </p>
@@ -110,11 +109,7 @@ window.open('version.html','','height=850, width=700, toolbar=no, menubar=no, sc
 <a href="javascript:;" onClick="showDescText('4')"><i>More detail</i><img src="arrow.gif" border="0" onload="infoldItems()" /></a><div id="4" class="subdesc"><br />
 <p>Adobe RGB (1998) is a commonly used industry-standard colour 
   profile supplied with Adobe Photoshop. sRGB does not have a wide enough colour 
-  gamut and clips some CMYK colours. Adobe colour profiles can be downloaded free 
-  from: </p>
-<p>Mac: <a href="http://www.adobe.com/support/downloads/detail.jsp?ftpID=3681" target="_blank">http://www.adobe.com/support/downloads/detail.jsp?ftpID=3681</a><br>
-  Windows: <a href="http://www.adobe.com/support/downloads/detail.jsp?ftpID=3680" target="_blank">http://www.adobe.com/support/downloads/detail.jsp?ftpID=3680</a> 
-</p>
+  gamut and clips some CMYK colours. </p>
 <p>Tagged Image File Format (TIFF) is the preferred file format. When saving tiffs 
   in Photoshop you are given options for compression and byte order. For maximum 
   compatibility, TIFFs should be saved with 8-bit, uncompressed options in Windows 
@@ -179,7 +174,7 @@ window.open('version.html','','height=850, width=700, toolbar=no, menubar=no, sc
   colours). This means somewhere in the imaging chain there will need to be a 
   RGB to CMYK conversion. There are many ways to perform this conversion, but 
   only one way to do it correctly.</p>
-<p>We suggest you convert from RGB to CMYK using Standards Australia &amp; International Organization for Standardization standard profiles (<a href="http://www.iso.org/iso/catalogue_detail.htm?csnumber=37880" target="_blank">AS/ISO 12647-2</a>). Profiles may be downloaded from <a href="http://www.eci.org/en/start" target="_blank">www.eci.org/en/start</a>. If you are unsure which ICC profile to use for offset printing, we recommended you use ISO Coated v2 300% (ECI).</p>
+<p>We suggest you convert from RGB to CMYK using Standards Australia &amp; International Organization for Standardization standard profiles. If you are unsure which ICC profile to use for offset printing, we recommended you use ISO Coated v2 300% (ECI).</p>
 <p> CMYK conversion usually occurs at the end of the workflow and is device dependent. 
   Each press / inkset / media combination has different characteristics requiring 
   a specific colour conversion / ICC profile. There is no such thing as a "Generic 
