--- a/version.html
+++ b/version.html
@@ -17,6 +17,12 @@
 <blockquote> 
   <p align="center"><b>APDIG Version History</b> </p>
   <p><b>Version 1.6</b> <br>
+  <i>4 April 2022</i> <br>
+1. Updated software references.<br>
+2. Removed outdated links.<br>
+</p>
+  <p align="center"><b>APDIG Version History</b> </p>
+  <p><b>Version 1.6</b> <br>
   <i>2 January 2019</i> <br>
 1. Updated software references.<br>
 2. Updated links.<br>
