--- a/version.html
+++ b/version.html
@@ -16,10 +16,15 @@
 <body>		
 <blockquote> 
   <p align="center"><b>APDIG Version History</b> </p>
-  <p><b>Version 1.7</b> <br>
+<p><b>Version 1.8</b> <br>
   <i>27 November 2023</i> <br>
 1. Updated software references.<br>
 2. Endorsed by Image Makers Association Australia.<br>
+</p>
+  <p><b>Version 1.7</b> <br>
+  <i>4 April 2022</i> <br>
+1. Updated software references.<br>
+2. Removed outdated links.<br>
 </p>
   <p><b>Version 1.6</b> <br>
   <i>2 January 2019</i> <br>
