--- a/index.html
+++ b/index.html
@@ -289,13 +289,11 @@ window.open('version.html','','height=850, width=700, toolbar=no, menubar=no, sc
  
 <p align="left"><b>Endorsed by</b><br>
   <a href="https://www.imagemakersassociation.com.au" target="_blank"><u>IMAA</u></a> (Image Makers Association Australia)<br>
-  <a href="https://www.acmp.com.au" target="_blank"><u>ACMP</u></a> (Association 
-  of Australian Commercial + Media Photographers)<br>
-  <a href="https://www.aipp.com.au" target="_blank"><u>AIPP</u></a> (Australian 
+  <u>ACMP</u> (Association of Australian Commercial + Media Photographers)<br>
+  <u>AIPP</u> (Australian 
   Institute of Professional Photography)<br>
-  <a href="https://www.ideaaustralia.com" target="_blank"><u>IDEA</u></a> (Imaging &amp; Digital Entertainment Association)<br>
-<a href="https://www.theimagingalliance.com/" target="_blank"><u>APCI</u></a> (Association 
-  of Professional Color Imagers)</p>
+  <u>IDEA</u> (Imaging &amp; Digital Entertainment Association)<br>
+<u>APCI</u> (Association of Professional Color Imagers)</p>
 
 <p>&nbsp; </p>
 
