--- a/index.html
+++ b/index.html
@@ -289,11 +289,11 @@ window.open('version.html','','height=850, width=700, toolbar=no, menubar=no, sc
  
 <p align="left"><b>Endorsed by</b><br>
   <a href="https://www.imagemakersassociation.com.au" target="_blank"><u>IMAA</u></a> (Image Makers Association Australia)<br>
-  <u>ACMP</u> (Association of Australian Commercial + Media Photographers)<br>
-  <u>AIPP</u> (Australian 
+  ACMP (Association of Australian Commercial + Media Photographers)<br>
+  AIPP (Australian 
   Institute of Professional Photography)<br>
-  <u>IDEA</u> (Imaging &amp; Digital Entertainment Association)<br>
-<u>APCI</u> (Association of Professional Color Imagers)</p>
+  IDEA (Imaging &amp; Digital Entertainment Association)<br>
+  APCI (Association of Professional Color Imagers)</p>
 
 <p>&nbsp; </p>
 
