--- a/version.html
+++ b/version.html
@@ -19,7 +19,8 @@
 <p><b>Version 1.8</b> <br>
   <i>27 November 2023</i> <br>
 1. Updated software references.<br>
-2. Endorsed by Image Makers Association Australia.<br>
+2. Updated file delivery recommendations.<br>
+3. Endorsed by Image Makers Association Australia.<br>
 </p>
   <p><b>Version 1.7</b> <br>
   <i>4 April 2022</i> <br>
