--- a/index.html
+++ b/index.html
@@ -134,14 +134,13 @@ window.open('version.html','','height=850, width=700, toolbar=no, menubar=no, sc
 <p style="text-align: right;"><a href="javascript:;" onClick="showDescText('4')"><i>Hide</i><img src="arrowup.gif" border="0"/></a></div></p>
 
 
-  <p><b>5.</b> Deliver files on USB Flash Drive.
+  <p><b>5.</b> Deliver files via cloud services or SSD.
 
 <a href="javascript:;" onClick="showDescText('5')"><i>More detail</i><img src="arrow.gif" border="0" onload="infoldItems()" /></a><div id="5" class="subdesc"><br />
-<p>Optical discs were the preferred method of delivery however as image resolution and file sizes have increased delivery on USB Flash Drives, portable hard drives and cloud services are now more common. Format and label the drive for the client computer system, i.e., FAT32, Mac HFS or Windows NTFS. Write optical discs using 
-  the ISO 9660 format to maintain compatibility across platforms. Close disc sessions 
-  so no more data can be written. A relaxed ISO 9660 standard is also common but 
-  check with your client. Label the disc with a meaningful title that the computer 
-  can pick up and display. </p>
+<p>Optical discs were the preferred method of delivery however as image resolution and file sizes have increased delivery via cloud services, USB flash drive, 
+	SSD or portable hard drives are now more common. Format and label the drive for the client computer system, i.e., FAT32, Mac HFS or Windows NTFS. 
+	Write optical discs using the ISO 9660 format to maintain compatibility across platforms. Close disc sessions so no more data can be written. 
+	A relaxed ISO 9660 standard is also common but check with your client. Label the disc with a meaningful title that the computer can pick up and display. </p>
 <p>For archival purposes we recommend marking discs only with pens that are designed 
   for the purpose. The safest place to write on a disc is on the small clear hub. 
   Adhesive paper labels should be avoided as they could come loose in an optical disc drive, 
