--- a/index.html
+++ b/index.html
@@ -281,6 +281,9 @@ window.open('version.html','','height=850, width=700, toolbar=no, menubar=no, sc
   <a href="https://www.nickrains.com" target="_blank">Nick Rains</a>. APDIG retains 
   copyright on all content as enforced under the Digital Millennium Copyright 
   Act, in addition to local and international copyright laws. All rights reserved.</p>
+	<p align="left"><b>Privacy Policy</b><br>
+  We do not use cookies or collect any personal information about you when you visit this website. 
+</p>
 <p align="left"><b>Contact</b><br>
   If your organisation would like to be involved in or endorse the APDIG please 
   contact us:<br>
