remove invalid Adobe links

--- a/index.html
+++ b/index.html
@@ -110,10 +110,7 @@ window.open('version.html','','height=850, width=700, toolbar=no, menubar=no, sc
 <a href="javascript:;" onClick="showDescText('4')"><i>More detail</i><img src="arrow.gif" border="0" onload="infoldItems()" /></a><div id="4" class="subdesc"><br />
 <p>Adobe RGB (1998) is a commonly used industry-standard colour 
   profile supplied with Adobe Photoshop. sRGB does not have a wide enough colour 
-  gamut and clips some CMYK colours. Adobe colour profiles can be downloaded free 
-  from: </p>
-<p>Mac: <a href="http://www.adobe.com/support/downloads/detail.jsp?ftpID=3681" target="_blank">http://www.adobe.com/support/downloads/detail.jsp?ftpID=3681</a><br>
-  Windows: <a href="http://www.adobe.com/support/downloads/detail.jsp?ftpID=3680" target="_blank">http://www.adobe.com/support/downloads/detail.jsp?ftpID=3680</a> 
+  gamut and clips some CMYK colours.
 </p>
 <p>Tagged Image File Format (TIFF) is the preferred file format. When saving tiffs 
   in Photoshop you are given options for compression and byte order. For maximum 
